Login function, querying user and password in the database with jpql and mapping of the entities that we will have in the application database. Using JPA and SQL Concepts